--- a/package.json
+++ b/package.json
@@ -4,16 +4,19 @@
   "engines": {
     "node": ">=15.0.0"
   },
+  "homepage": "https://azrulwm.github.io/qwik-affirmations",
   "private": true,
   "trustedDependencies": [
     "sharp"
   ],
   "scripts": {
+    "predeploy": "npm run build.client && npm run build.server",
+    "deploy": "gh-pages -d dist",
     "build": "qwik build",
     "build.client": "vite build",
     "build.preview": "vite build --ssr src/entry.preview.tsx",
+    "build.server": "vite build -c adapters/static/vite.config.ts",
     "build.types": "tsc --incremental --noEmit",
-    "deploy": "echo 'Run \"npm run qwik add\" to install a server adapter'",
     "dev": "vite --mode ssr",
     "dev.debug": "node --inspect-brk ./node_modules/vite/bin/vite.js --mode ssr --force",
     "fmt": "prettier --write .",
@@ -33,6 +36,7 @@
     "autoprefixer": "^10.4.14",
     "eslint": "8.45.0",
     "eslint-plugin-qwik": "^1.2.12",
+    "gh-pages": "^6.0.0",
     "postcss": "8.4.27",
     "prettier": "3.0.0",
     "tailwindcss": "3.3.3",
