Adding builder for testing purposes

--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "qwik": "qwik"
   },
   "devDependencies": {
+    "@builder.io/dev-tools": "^0.0.44",
     "@builder.io/qwik": "^1.2.12",
     "@builder.io/qwik-city": "^1.2.12",
+    "@builder.io/sdk-qwik": "^0.4.5",
     "@types/eslint": "8.44.1",
     "@types/node": "^20.4.5",
     "@typescript-eslint/eslint-plugin": "6.2.0",
